--- a/src/paragon-framework/modules/avatar/_avatar.scss
+++ b/src/paragon-framework/modules/avatar/_avatar.scss
@@ -5,7 +5,7 @@
 	height: 2.5rem;
 	margin-right: $space-xs;
 	// Fixes safari issue
-	-webkit-mask-image: -webkit-radial-gradient($color-white, $color-black);
+	-webkit-mask-image: -webkit-radial-gradient(var(--color-white), var(--color-black));
 	overflow: hidden;
 	width: 2.5rem;
 
