--- a/src/paragon-framework/modules/forms/themed-elements.scss
+++ b/src/paragon-framework/modules/forms/themed-elements.scss
@@ -1,32 +1,32 @@
 /* Form Variables
   =========================================================================== */
 //Custom checkbox color theme
-$checkbox--active: $color-blue !default; //Color of checkbox when checked
-$checkbox--icon: $color-white !default; //Color of check icon when checked
-$checkbox--focus: $color-focus !default; //Color of border around checkbox when focused
-$checkbox--disabled: $color-gray-3 !default; //Color of checkbox when checked and disabled
-$checkbox--icon-disabled: $color-gray-4 !default; //Color of check icon when checked and disabled
-$checkbox--border: $color-border;
-$checkbox--border-error: $color-red-light;
-$checkbox--color-error: $color-red;
-$checkbox--border-warning: $color-orange-light;
-$checkbox--color-warning: $color-orange;
+$checkbox--active: var(--color-accent) !default; //Color of checkbox when checked
+$checkbox--icon: var(--color-text) !default; //Color of check icon when checked
+$checkbox--focus: var(--form-element-border-focus) !default; //Color of border around checkbox when focused
+$checkbox--disabled: var(--card-disabled-bg) !default; //Color of checkbox when checked and disabled
+$checkbox--icon-disabled: var(--color-icon-primary) !default; //Color of check icon when checked and disabled
+$checkbox--border: var(--form-element-border);
+$checkbox--border-error: var(--form-element-border-error);
+$checkbox--color-error: var(--color-error);
+$checkbox--border-warning: var(--color-warning);
+$checkbox--color-warning: var(--color-warning);
 
 //Custom radio button color theme
-$radio--active: $color-blue !default; //Color of radio button when checked
-$radio--icon: $color-white !default; //Color of radio icon when checked
-$radio--focus: $color-focus !default; //Color of border around radio when focused
-$radio--disabled: $color-gray-3 !default; //Color of radio when checked and disabled
-$radio--icon-disabled: $color-gray-4 !default; //Color of radio icon when checked and disabled
-$radio--border: $color-border;
-$radio--border-error: $color-red-light;
-$radio--color-error: $color-red;
-$radio--border-warning: $color-orange-light;
-$radio--color-warning: $color-orange;
+$radio--active: var(--color-accent) !default; //Color of radio button when checked
+$radio--icon: var(--color-white) !default; //Color of radio icon when checked
+$radio--focus: var(--color-accent) !default; //Color of border around radio when focused
+$radio--disabled: var(--card-disabled-bg) !default; //Color of radio when checked and disabled
+$radio--icon-disabled: var(--color-icon-primary) !default; //Color of radio icon when checked and disabled
+$radio--border: var(--color-border);
+$radio--border-error: var(--color-error-light);
+$radio--color-error: var(--color-error);
+$radio--border-warning: var(--color-warning-light);
+$radio--color-warning: var(--color-warning);
 
 //Switch color theme
-$switch--on: $color-blue !default; //Color of switch when on
-$switch--off: $color-gray-3 !default; //Color of switch when off
+$switch--on: var(--color-accent) !default; //Color of switch when on
+$switch--off: var(--color-border) !default; //Color of switch when off
 
 /* Custom Checkboxes
   ================================================== */
@@ -110,7 +110,7 @@ $switch--off: $color-gray-3 !default; //Color of switch when off
 
 	//Checkbox Hover
 	input:hover ~ label { //Text Hover
-		color: rgba($color-black, 0.6);
+		color: rgba(var(--color-black), 0.6);
 
 		&::before { //Checkbox Hover
 			color: $checkbox--border;
@@ -161,7 +161,7 @@ $switch--off: $color-gray-3 !default; //Color of switch when off
 		input:active ~ label::before {
 			background-color: $checkbox--color-error; // Checkbox Active
 			border: 2px solid $checkbox--color-error; // Checkbox Active
-			color: $color-white; //Checkbox Icon
+			color: var(--color-white); //Checkbox Icon
 		}
 
 		//Checkbox Focus
@@ -182,7 +182,7 @@ $switch--off: $color-gray-3 !default; //Color of switch when off
 		input:active ~ label::before {
 			background-color: $checkbox--color-warning; // Checkbox Active
 			border: 2px solid $checkbox--color-warning; // Checkbox Active
-			color: $color-white; //Checkbox Icon
+			color: var(--color-white); //Checkbox Icon
 		}
 
 		//Checkbox Focus
@@ -227,19 +227,19 @@ $switch--off: $color-gray-3 !default; //Color of switch when off
 		}
 	}
 
-	//Radio Hover
+	//Radio Hover TODO
 	input:hover:not(:checked) ~ label { //Text Hover
-		color: rgba($color-black, 0.6);
+		color: rgba(var(--color-black), 0.6);
 
 		&::before { //Button Hover
 			color: $radio--border;
 		}
 	}
 
-	//Radio Active
+	//Radio Active TODO
 	input:checked ~ label {
 		&::before {
-			color: $color-white;
+			color: var(--color-white);
 		}
 	}
 
@@ -247,7 +247,7 @@ $switch--off: $color-gray-3 !default; //Color of switch when off
 		&::before {
 			background-color: $radio--active;
 			border-color: $radio--active;
-			color: $color-white;
+			color: var(--color-white);
 		}
 	}
 
@@ -285,7 +285,7 @@ $switch--off: $color-gray-3 !default; //Color of switch when off
 		input:checked ~ label::before {
 			background-color: $radio--color-error;
 			border-color: $radio--color-error;
-			color: $color-white;
+			color: var(--color-white);
 		}
 		input:focus ~ label::before { box-shadow: 0 0 0 4px rgba($radio--border-error, 0.6); }
 	}
@@ -302,7 +302,7 @@ $switch--off: $color-gray-3 !default; //Color of switch when off
 		input:checked ~ label::before {
 			background-color: $radio--color-warning;
 			border-color: $radio--color-warning;
-			color: $color-white;
+			color: var(--color-white);
 		}
 		input:focus ~ label::before { box-shadow: 0 0 0 4px rgba($radio--border-warning, 0.6); }
 	}
@@ -329,18 +329,18 @@ $switch--off: $color-gray-3 !default; //Color of switch when off
 
 	input[type='range']::-webkit-slider-runnable-track {
 		-webkit-appearance: none;
-		background-color: $color-gray-3;
+		background-color: var(--color-border);
 		border-radius: 30px;
 		height: 0.5rem;
-		&:active { background-color: $color-gray-3; }
+		&:active { background-color: var(--color-border); }
 	}
 
 	input[type='range']::-moz-range-track {
-		background-color: $color-gray-3;
+		background-color: var(--color-border);
 		border: inherit;
 		border-radius: 30px;
 		height: 0.5rem;
-		&:active { background-color: $color-gray-3; }
+		&:active { background-color: var(--color-border); }
 	}
 
 	input[type=range]::-moz-focus-outer { border: 0; }
@@ -363,8 +363,8 @@ $switch--off: $color-gray-3 !default; //Color of switch when off
 	//THUMB
 	input[type='range']::-webkit-slider-thumb {
 		-webkit-appearance: none;
-		background-color: $color-white;
-		border: 2px solid $color-gray-3;
+		background-color: var(--color-white);
+		border: 2px solid var(--color-border);
 		border-radius: 30px;
 		height: 20px;
 		margin-top: -5px;
@@ -372,8 +372,8 @@ $switch--off: $color-gray-3 !default; //Color of switch when off
 	}
 
 	input[type='range']::-moz-range-thumb {
-		background-color: $color-white;
-		border: 2px solid $color-gray-3;
+		background-color: var(--color-white);
+		border: 2px solid var(--color-border);
 		border-radius: 30px;
 		height: 20px;
 		width: 20px;
@@ -381,8 +381,8 @@ $switch--off: $color-gray-3 !default; //Color of switch when off
 
 	input[type='range']::-ms-thumb {
 		-webkit-appearance: none;
-		background-color: $color-white;
-		border: 2px solid $color-gray-3;
+		background-color: var(--color-white);
+		border: 2px solid var(--color-border);
 		height: 20px;
 		width: 20px;
 	}
@@ -451,7 +451,7 @@ $switch--off: $color-gray-3 !default; //Color of switch when off
 
 		&::before,
 		&::after {
-			color: $color-white;
+			color: var(--color-white);
 			display: block;
 			float: left;
 			font-size: 0.8rem;
@@ -477,7 +477,7 @@ $switch--off: $color-gray-3 !default; //Color of switch when off
 	//Inactive circle position
 	.switch--handle {
 		@include transition(all 0.05s ease-in 0s);
-		background-color: $color-white;
+		background-color: var(--color-white);
 		border-radius: 50%;
 		bottom: 0;
 		display: block;
