--- a/src/paragon-styleguide/example-css-grid.scss
+++ b/src/paragon-styleguide/example-css-grid.scss
@@ -2,8 +2,8 @@
 Display Compatibility Banner
 -------------------------------- */
 .grid-compatibility {
-	background-color: $color-red;
-	color: $color-white;
+	background-color: var(--color-error);
+	color: var(--color-white);
 	margin: -1rem 0;
 	padding: 1rem;
 	text-align: center;
@@ -18,33 +18,33 @@ Example App Mockups Below
 .grid-highlight,
 .grid-highlight > div {
 	background-color: rgba(221, 226, 230, 0.5);
-	border: 2px solid $color-border;
+	border: 2px solid var(--color-border);
 	border-radius: 5px;
 }
 
 .grid-highlight-blue,
 .grid-highlight-blue > div {
-	background-color: rgba($color-blue, 0.5);
-	border: 2px solid $color-blue;
+	background-color: rgba(var(--color-accent), 0.5);
+	border: 2px solid var(--color-accent);
 	border-radius: 5px;
-	color: $color-white;
+	color: var(--color-text-invert);
 	text-align: center;
 }
 
 .grid-highlight-red,
 .grid-highlight-red > div {
-	background-color: rgba($color-red, 0.5);
-	border: 2px solid $color-red;
+	background-color: rgba(var(--color-error), 0.5);
+	border: 2px solid var(--color-error);
 	border-radius: 5px;
-	color: $color-white;
+	color: var(--color-text-invert);
 	text-align: center;
 }
 
 .grid-highlight-green,
 .grid-highlight-green > div {
-	background-color: rgba($color-green, 0.5);
-	border: 2px solid $color-green;
+	background-color: rgba(var(--color-success), 0.5);
+	border: 2px solid var(--color-success);
 	border-radius: 5px;
-	color: $color-white;
+	color: var(--color-text-invert);
 	text-align: center;
 }
