--- a/src/paragon-styleguide/image.scss
+++ b/src/paragon-styleguide/image.scss
@@ -1,6 +1,6 @@
 //Image Container
 .image-container {
-	background-color: $color-gray-2;
+	background-color: var(--color-container-background);
 	border-radius: 5px;
 	padding: 1rem;
 
