--- a/src/paragon-styleguide/typography.scss
+++ b/src/paragon-styleguide/typography.scss
@@ -32,14 +32,14 @@
   ================================================== */
 
 blockquote {
-	border-left: 4px solid $color-border;
+	border-left: 4px solid var(--color-border);
 	margin-left: $space-m;
 	padding-left: $space-m;
 
-	&.tips { border-left: 4px solid $color-green; }
-	&.warning { border-left: 4px solid $color-orange; }
-	&.caution { border-left: 4px solid $color-red; }
-	&.related { border-left: 4px solid $color-blue; }
+	&.tips { border-left: 4px solid var(--color-green); }
+	&.warning { border-left: 4px solid var(--color-orange); }
+	&.caution { border-left: 4px solid var(--color-red); }
+	&.related { border-left: 4px solid var(--color-accent); }
 	p { margin-top: 0.5rem; }
 	.tips-list { line-height: 1.5rem; }
 }
@@ -49,7 +49,7 @@ blockquote {
 
 	&::before {
 		border-radius: 30px;
-		color: $color-white;
+		color: var(--color-white);
 		content: '';
 		font-size: 18px;
 		font-weight: $font-weight-semibold;
