--- a/src/paragon-framework/actions/button.scss
+++ b/src/paragon-framework/actions/button.scss
@@ -175,7 +175,7 @@ $action--focus: $color-focus !default;
 	&.button--border {
 		.button {
 			background-color: transparent;
-			border: 1px solid $color-border;
+			border: 1px solid var(--color-border);
 			color: $color-subtext;
 			display: inline-block;
 		}
