--- a/src/paragon-framework/base/extendables/_extendables.scss
+++ b/src/paragon-framework/base/extendables/_extendables.scss
@@ -12,8 +12,8 @@
 /* Icon Extendables
 =========================================================================== */
 //TO DO: Add more colors for icons
-%icon-white { i::before { color: $color-white !important; } }
-%icon-purple { i::before { color: $color-purple !important; } }
+%icon-white { i::before { color: var(--color-white) !important; } }
+%icon-purple { i::before { color: var(--color-primary) !important; } }
 
 /* Shadow Extendables
 =========================================================================== */
@@ -46,7 +46,7 @@
 
 	&::-webkit-scrollbar-thumb {
 		background-clip: content-box;
-		background-color: $color-gray-3;
+		background-color: var(--color-border);
 		border: 4px solid transparent;
 		border-radius: 10px;
 		min-height: 2rem;
@@ -66,7 +66,7 @@
 
 	&::-webkit-scrollbar-thumb {
 		background-clip: content-box;
-		background-color: rgba($color-gray-2, 0.3);
+		background-color: rgba(var(--color-background), 0.3);
 		border: 4px solid transparent;
 		border-radius: 10px;
 		min-height: 2rem;
@@ -77,7 +77,7 @@
   =========================================================================== */
 %loading-animation {
 	* {
-		background-color: $color-background;
+		background-color: var(--color-background);
 		border-radius: 3px;
 		height: 1.25rem;
 		overflow: hidden;
@@ -85,7 +85,7 @@
 
 		&::after {
 			animation: loadingCard 1.2s infinite;
-			background: linear-gradient(90deg, transparent, rgba($color-black, 0.07), transparent);
+			background: linear-gradient(90deg, transparent, rgba(var(--color-black), 0.07), transparent);
 			content: '';
 			display: block;
 			height: 100%;
