--- a/src/paragon-framework/modules/forms/card-controls.scss
+++ b/src/paragon-framework/modules/forms/card-controls.scss
@@ -1,7 +1,7 @@
-$card-checkbox--active: $color-blue !default; //Color of checkbox and card when checked
-$card-checkbox--focus: $color-focus !default; //Color of border around card-checkbox when focused
-$card-disabled-background: $color-gray-3 !default;
-$card-disabled-border: $color-gray-4 !default;
+$card-checkbox--active: var(--color-accent) !default; //Color of checkbox and card when checked
+$card-checkbox--focus: var(--color-focus) !default; //Color of border around card-checkbox when focused
+$card-disabled-background: var(--card-disabled-bg) !default;
+$card-disabled-border: var(--card-disabled-border) !default;
 $card-checkbox--padding: 1rem !default; //Padding of checkbox
 
 .checkbox-card { @extend .checkbox--custom; }
@@ -63,7 +63,7 @@ $card-checkbox--padding: 1rem !default; //Padding of checkbox
 	input[disabled]:checked ~ label { //disabled cards
 		background-color: $card-disabled-background;
 		border-color: $card-disabled-background;
-		color: $color-text;
+		color: var(--color-text);
 		cursor: default;
 		opacity: 0.4;
 		pointer-events: none;
