--- a/src/paragon-framework/modules/pagination/pagination.scss
+++ b/src/paragon-framework/modules/pagination/pagination.scss
@@ -7,7 +7,8 @@
 	li {
 		display: inline-flex; //fixes whitespace bug present with inline-block
 		list-style: none;
-		&:not(.is-active) .button { @extend .button--transparent; } //only shows transparent if not active
+		// TODO
+		// &:not(.is-active) .button { @extend .button--transparent; } //only shows transparent if not active
 		.button { padding: $space-xs $space-s !important; } //overrides smaller paddinng inherited from transparent buttons
 	}
 	.dashing-icon { margin: 0 !important; }
@@ -20,7 +21,7 @@
 	&.pagination--group {
 		li {
 			.button {
-				border: 1px solid $color-border;
+				border: 1px solid var(--color-border);
 				border-radius: 0;
 				margin-left: -1px;
 			}
@@ -39,12 +40,12 @@
 	.button {
 		&:hover,
 		&:focus,
-		&:active { color: $color-white; }
+		&:active { color: var(--color-white); }
 	}
 
 	.button--gray {
 		&:hover,
 		&:focus,
-		&:active { color: $color-gray-4; }
+		&:active { color: var(--color-subtext); }
 	}
 }
