--- a/src/paragon-framework/modules/tags/tags.scss
+++ b/src/paragon-framework/modules/tags/tags.scss
@@ -3,7 +3,7 @@
 
 $tags: '.tag';
 $tag-hover-rules: '.is-selectable';
-$tag-default-color: $color-gray-2;
+$tag-default-color: var(--color-container-background);
 
 /* Tag Extendables
   =========================================================================== */
@@ -13,7 +13,7 @@ $tag-default-color: $color-gray-2;
 	background-color: $tag-default-color;
 	border: 2px solid $tag-default-color;
 	border-radius: 3px;
-	color: $color-blue;
+	color: var(--color-accent);
 	display: inline-block;
 	font-size: $font-size-xsmall;
 	font-weight: $font-weight-semibold;
@@ -44,8 +44,8 @@ $tag-default-color: $color-gray-2;
 
 		&:hover,
 		&:focus {
-			border: 2px solid $color-blue;
-			color: $color-blue;
+			border: 2px solid var(--color-accent);
+			color: var(--color-accent);
 			opacity: 1;
 			text-decoration: none;
 			transition: border-color 0.1s ease-in-out;
@@ -57,31 +57,31 @@ $tag-default-color: $color-gray-2;
 	&.tag--large { font-size: $font-size-normal; }
 
 	&.tag--primary,
-	&.tag--blue { @include tag--action($color: $color-blue); }
+	&.tag--blue { @include tag--action($color: var(--color-accent)); }
 
 	&.tag--secondary,
 	&.tag--gray,
-	&.tag--grey { @include tag--action($color: $color-text); }
-	&.tag--green { @include tag--action($color: $color-green); }
-	&.tag--orange { @include tag--action($color: $color-orange); }
-	&.tag--purple { @include tag--action($color: $color-purple); }
-	&.tag--red { @include tag--action($color: $color-red); }
-	&.tag--white { @include tag--action($color: $color-white); }
-	&.tag--black { @include tag--action($color: $color-black); }
+	&.tag--grey { @include tag--action($color: var(--color-text)); }
+	&.tag--green { @include tag--action($color: var(--color-success)); }
+	&.tag--orange { @include tag--action($color: var(--color-warning)); }
+	&.tag--purple { @include tag--action($color: var(--color-primary)); }
+	&.tag--red { @include tag--action($color: var(--color-error)); }
+	&.tag--white { @include tag--action($color: var(--color-white)); }
+	// &.tag--black { @include tag--action($color: $color-black); }
 }
 
 .tag--solid {
 	&.tag--primary,
-	&.tag--blue { @include tag($tag-color: $color-blue, 		$color: $color-white); }
+	&.tag--blue { @include tag($tag-color: var(--color-accent), 		$color: var(--color-text-invert)); }
 
 	&.tag--secondary,
 	&.tag--grey,
-	&.tag--gray { @include tag($tag-color: $tag-default-color, 	$color: $color-black); }
-	&.tag--green { @include tag($tag-color: $color-green, 				$color: $color-white); }
-	&.tag--orange { @include tag($tag-color: $color-orange, 			$color: $color-black); }
-	&.tag--purple { @include tag($tag-color: $color-purple, 			$color: $color-white); }
-	&.tag--red { @include tag($tag-color: $color-red,    			$color: $color-white); }
-	&.tag--white { @include tag($tag-color: $color-white,    		$color: $color-black); }
+	&.tag--gray { @include tag($tag-color: $tag-default-color, 	$color: var(--color-black)); }
+	&.tag--green { @include tag($tag-color: var(--color-success), 				$color: var(--color-text-invert)); }
+	&.tag--orange { @include tag($tag-color: var(--color-warning), 			$color: var(--color-black)); }
+	&.tag--purple { @include tag($tag-color: var(--color-primary), 			$color: var(--color-text-invert)); }
+	&.tag--red { @include tag($tag-color: var(--color-error),    			$color: var(--color-text-invert)); }
+	&.tag--white { @include tag($tag-color: var(--color-white),    		$color: var(--color-black)); }
 }
 
 //Split the tag to hold values on the right
@@ -94,20 +94,21 @@ $tag-default-color: $color-gray-2;
 
 	#{$tag-hover-rules} {
 		//Default hover effects
-		border-color: $color-blue;
+		border-color: var(--color-accent);
 		transition: border-color 0.1s ease-in-out;
 
-		&.tag--primary,
-		&.tag--blue { border-color: darken($color-blue, 20%); }
-
-		&.tag--secondary,
-		&.tag--grey,
-		&.tag--gray { border-color: darken($tag-default-color, 20%); }
-		&.tag--green { border-color: darken($color-green, 20%); }
-		&.tag--orange { border-color: darken($color-orange, 20%); }
-		&.tag--purple { border-color: darken($color-purple, 20%);; }
-		&.tag--red { border-color: darken($color-red, 20%);; }
-		&.tag--white { border-color: darken($color-white, 20%);; }
+		// TODO: lighten and darken
+		// &.tag--primary,
+		// &.tag--blue { border-color: darken(var(--color-accent), 20%); }
+		//
+		// &.tag--secondary,
+		// &.tag--grey,
+		// &.tag--gray { border-color: darken($tag-default-color, 20%); }
+		// &.tag--green { border-color: darken(var(--color-success), 20%); }
+		// &.tag--orange { border-color: darken(var(--color-warning), 20%); }
+		// &.tag--purple { border-color: darken(var(--color-primary), 20%);; }
+		// &.tag--red { border-color: darken(var(--color-error), 20%);; }
+		// &.tag--white { border-color: darken(var(--color-white), 20%);; }
 	}
 
 	.tag:first-child {
@@ -117,49 +118,52 @@ $tag-default-color: $color-gray-2;
 	}
 
 	.tag:last-child {
-		background-color: $color-white;
+		background-color: var(--color-white);
 		border-left: transparent;
 		border-radius: 0 3px 3px 0;
-		color: $color-text;
+		color: var(--color-text);
 		margin-left: 0;
 	}
 }
 
 //Example: Custom Tags
 .tag {//Basic
-	&.plan-11 {	@include tag($tag-color: $color-orange, $color: $color-black); }
+	&.plan-11 {	@include tag($tag-color: var(--color-warning), $color: var(--color-black)); }
 }
 
-.tag--counter {
-	#{$tag-hover-rules} {
-		&.plan-11 {
-			border-color: darken($color-orange, 20%);
-		}
-	}
-}
+// TODO
+// .tag--counter {
+// 	#{$tag-hover-rules} {
+// 		&.plan-11 {
+// 			border-color: darken(var(--color-warning), 20%);
+// 		}
+// 	}
+// }
 
 .plan-1 {//Classic
 	&.tag {
-		@include tag($tag-color: #8560A8, $color: $color-white); }
+		@include tag($tag-color: #8560A8, $color: var(--color-white)); }
 }
 
-.tag--counter {
-	#{$tag-hover-rules} {
-		&.plan-1 {
-			border-color: darken(#8560a8, 20%);
-		}
-	}
-}
+// TODO
+// .tag--counter {
+// 	#{$tag-hover-rules} {
+// 		&.plan-1 {
+// 			border-color: darken(#8560a8, 20%);
+// 		}
+// 	}
+// }
 
 .plan-0 {//Some other one!
 	&.tag {
-		@include tag($tag-color: $color-green, $color: $color-white); }
+		@include tag($tag-color: var(--color-success), $color: var(--color-white)); }
 }
 
-.tag--counter {
-	#{$tag-hover-rules} {
-		&.plan-0 {
-			border-color: darken($color-green, 20%);
-		}
-	}
-}
+// TODO
+// .tag--counter {
+// 	#{$tag-hover-rules} {
+// 		&.plan-0 {
+// 			border-color: darken(var(--color-success), 20%);
+// 		}
+// 	}
+// }
